<resources>
    <string name="app_name">doorip</string>
    <string name="view_type_error_msg">Unknown View Type : %d</string>
    <string name="adapter_not_initialized_error_msg">Adapter is not initialized</string>
    <string name="to_string">%s</string>
    <string name="dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="server_error">서버 통신에 실패했습니다</string>
    <string name="name_blank_error">닉네임에는 공백만 입력할 수 없어요</string>
    <string name="name_over_error">닉네임은 3자 이하여야 합니다</string>
    <string name="info_over_error">자기소개는 20자 이하여야 합니다</string>
    <string name="trip_over_error">여행 이름은 15자 이하여야 합니다</string>
    <string name="todo_over_error">할일은 15자 이하여야 합니다</string>
    <string name="todo_blank_error">제목에는 공백만 입력할 수 없어요</string>
    <string name="memo_over_error">메모는 1000자 이하여야 합니다</string>
    <string name="date_set_error">종료일이 시작일보다 빨라야합니다</string>
    <string name="will_be_update">해당 기능은 추후 업데이트 예정이에요 :)</string>
    <string name="sign_in_tv_btn">카카오 로그인</string>
    <string name="sign_in_tv_title">우리다운 여행을 하다</string>
    <string name="sign_in_tv_terms">개인정보처리방침</string>
    <string name="toast_back_pressed">버튼을 한번 더 누르면 종료됩니다</string>
    <string name="tag">#%s</string>
    <string name="counter">%1$d/%2$d</string>
    <string name="notice">안내</string>
    <string name="okay">확인</string>
    <string name="save">저장</string>
    <string name="internet_connect_error">인터넷 연결을 확인해주세요</string>
    <string name="sign_up_tb_title">프로필 생성</string>
    <string name="sign_up_name_tv_title">닉네임</string>
    <string name="sign_up_et_name_hint">3글자 이내로 작성해 주세요</string>
    <string name="sign_up_one_line_info_tv_title">한 줄 소개</string>
    <string name="sign_up_one_line_et_info">여행을 떠나기 전 설레는 마음을 적어볼까요?</string>
    <string name="sign_up_finish_btn">다음</string>
    <string name="tendency_splash_title">여행을 할 때 우리는 어떤 모습일까?</string>
    <string name="tendency_splash_sub_title">9개의 질문으로\n나를 대신할 여행 캐릭터를 찾아보세요</string>
    <string name="tendency_splash_start_btn">테스트 시작하기</string>
    <string name="tendency_splash_skip_btn">테스트 건너뛰기</string>
    <string name="tendency_splash_profile_skip_btn">내 여행 프로필로 돌아가기</string>
    <string name="tendency_test_title">나의 여행 캐릭터는?</string>
    <string name="tendency_test_button_next">다음</string>
    <string name="tendency_test_button_final">결과보기</string>
    <string name="tendency_test_result_toolbar">나의 여행 캐릭터</string>
    <string name="tendency_test_result_title">%1$s님의 여행 캐릭터는</string>
    <string name="tendency_test_result_finish_button">doorip 시작하기</string>
    <string name="tendency_test_result_profile_finish_button">내 여행 프로필로 돌아가기</string>
    <string name="tendency_test_result_restart_button"><u>다시 해볼래요</u></string>
    <string name="tendency_test_result_save">이미지로 저장</string>
    <string name="create_trip_tb_title">새로운 여행 만들기</string>
    <string name="create_trip_name_tv_title">어떤 여행인가요?</string>
    <string name="create_trip_et_name_hint">이번 여행 이름을 입력해 주세요</string>
    <string name="create_trip_one_line_info_tv_title">여행 일정을 알려주세요</string>
    <string name="create_trip_start_date">시작일</string>
    <string name="create_trip_slash">-</string>
    <string name="create_trip_end_date">종료일</string>
    <string name="create_trip_finish_btn">다음</string>
    <string name="create_trip_date">%1$d.%2$d.%3$d</string>
    <string name="create_trip_toast_error">시작일을 먼저 입력해 주세요</string>
    <string name="date_content_btn">선택하기</string>
    <string name="our_todo_tv_tirp_percent_title">우리 여행 진행률</string>
    <string name="our_todo_tv_trip_friend_title">함께 하는 친구들</string>
    <string name="our_todo_btn_invite_friend">초대</string>
    <string name="our_todo_btn_add_todo">같이 할일</string>
    <string name="our_todo_title_down_before">여행일까지 %s일 남았어요!</string>
    <string name="our_todo_title_down_during">여행 중이에요!</string>
    <string name="our_todo_title_down_end">여행이 완료되었어요!</string>
    <string name="our_todo_date_form">%s - %s</string>
    <string name="our_todo_day_form">%s월 %s일</string>
    <string name="our_todo_tv_empty_allocator">앗! 누가하지?</string>
    <string name="our_todo_participant_over_six">여행은 최대 6명까지 함께할 수 있어요</string>
    <string name="my_todo_btn_add_todo">혼자 할일</string>
    <string name="my_todo_tv_lock">혼자할일</string>
    <string name="my_todo_tv_title_down">나에게 남은 할일 %s개</string>
    <string name="todo_empty">할일을 추가해 보세요</string>
    <string name="my_todo_create_tv_title">할일 추가</string>
    <string name="my_todo_create_tv_todo">어떤 할일인가요?</string>
    <string name="my_todo_create_tv_todo_hint">할일을 입력해 주세요</string>
    <string name="my_todo_create_tv_date">언제까지 해야 하나요?</string>
    <string name="my_todo_create_tv_date_hint">날짜를 선택해 주세요</string>
    <string name="my_todo_create_tv_person">누가 하나요?</string>
    <string name="my_todo_create_tv_person_lock">혼자할일</string>
    <string name="my_todo_create_tv_person_lock_description">나만 볼 수 있는 할일이에요</string>
    <string name="my_todo_create_tv_memo">메모</string>
    <string name="my_todo_create_tv_memo_hint">메모를 입력해 주세요</string>
    <string name="my_todo_create_btn_finish">저장</string>
    <string name="todo_create_toast">할일을 추가했어요</string>
    <string name="my_todo_detail_tv_title">할일 조회</string>
    <string name="my_todo_detail_btn_delete">삭제하기</string>
    <string name="my_todo_detail_btn_mod">수정하기</string>
    <string name="todo_delete_toast">할일을 삭제했어요</string>
    <string name="todo_change_tv_title">할일 수정</string>
    <string name="todo_change_toast_success">할일을 수정했어요</string>
    <string name="todo_change_toast_failure">할일 수정에 실패했어요</string>
    <string name="todo_invite_tv_title">초대하기</string>
    <string name="todo_invite_tv_subtitle">초대코드를 보내 여행 친구를 추가해 보세요</string>
    <string name="todo_invite_btn_finish">완료</string>
    <string name="preference_tv_title">이번 여행은!</string>
    <string name="preference_btn_enter">여행 만들기</string>
    <string name="preference_btn_finish">저장하고 여행 시작하기</string>
    <string name="preference_no_matter">상관없어</string>
    <string name="dashboard_tv_title">%s님의 여행</string>
    <string name="dashboard_tv_empty">새로운 여행을 시작해 보세요</string>
    <string name="dashboard_btn_create_trip">여행 추가하기</string>
    <string name="dashboard_tv_completed_trip">여행종료</string>
    <string name="dashboard_tv_start_end_date">%s - %s</string>
    <string name="dashboard_tv_deadline">D-%d</string>
    <string name="dashboard_tv_traveling">여행중</string>
    <string name="menu_our_todo">우리여행</string>
    <string name="menu_my_todo">나의할일</string>
    <string name="start_trip_splash_title">doorip으로\n 모두가 함께 하는 여행!</string>
    <string name="start_trip_splash_btn_new_trip">새로운 여행 만들기</string>
    <string name="start_trip_splash_btn_enter_trip">초대받은 여행 입장하기</string>
    <string name="finish_trip_tv_title">새로운 여행을 만들었어요!</string>
    <string name="finish_trip_tv_trip_name">굉굉이랑 스페인</string>
    <string name="finish_trip_tv_invite_code">친구 초대코드</string>
    <string name="finish_trip_tv_copy_code">초대코드 복사하기</string>
    <string name="finish_trip_tv_send_code">친구에게 초대코드 보내기</string>
    <string name="finish_trip_tv_invite">바로 여행 시작하기</string>
    <string name="finish_trip_tv_copy_code_complete">초대코드가 복사되었어요</string>
    <string name="setting_tv_toolbar">설정</string>
    <string name="setting_tv_profile">여행 프로필</string>
    <string name="setting_tv_inquire">문의하기</string>
    <string name="setting_tv_service_version">서비스 버전</string>
    <string name="setting_tv_policy">서비스이용약관</string>
    <string name="setting_tv_terms">개인정보처리방침</string>
    <string name="setting_tv_about_doorip">About doorip</string>
    <string name="setting_tv_logout">로그아웃</string>
    <string name="setting_quit_dialog_title">정말 탈퇴하시겠어요?</string>
    <string name="setting_quit_dialog_message">탈퇴 시, 정보가 모두 없어져요</string>
    <string name="setting_quit_dialog_negative">탈퇴하기</string>
    <string name="setting_quit_dialog_positive">남아있기</string>
    <string name="setting_quit_dialog_quit">회원탈퇴</string>
    <string name="setting_logout_title">정말 로그아웃하시겠어요?</string>
    <string name="setting_logout_negative">취소</string>
    <string name="setting_logout_positive">로그아웃</string>
    <string name="profile_tv_title">내 여행 프로필</string>
    <string name="profile_tv_name">두릅이</string>
    <string name="profile_tv_one_line">나는 두릅이 좋다.</string>
    <string name="profile_tv_restart_button"><u>다시 해볼래요</u></string>
    <string name="profile_tv_no_trip">존재하지 않는 여행입니다.</string>
    <string name="profile_tv_edit">프로필 수정</string>
    <string name="profile_image_download_success">이미지가 저장되었어요\n친구들에게 공유해보세요!</string>
    <string name="profile_image_download_error">이미지를 저장할 수 없습니다\n안드로이드 버전을 확인해주세요</string>
    <string name="trip_profile_character">나의 여행 캐릭터</string>
    <string name="trip_profile_tag">여행 취향 태그</string>
    <string name="participant_profile_btn">여행 캐릭터 검사하러 가기</string>
    <string name="participant_profile_common">여행 캐릭터 검사를 아직 진행하지 않았어요</string>
    <string name="participant_profile_owner">지금 바로 나를 대신 할 여행 캐릭터를 만나보세요!</string>
    <string name="participant_profile_friend_title">%s의 여행 프로필</string>
    <string name="enter_trip_tv_layout">여행 입장하기</string>
    <string name="enter_trip_tv_invite_code">초대코드</string>
    <string name="enter_trip_tv_hint">친구에게 받은 초대코드 6자리를 입력해 주세요</string>
    <string name="enter_trip_tv_error">잘못된 초대코드예요</string>
    <string name="enter_trip_tv_next_button">초대코드 확인하기</string>
    <string name="enter_trip_invite_code_exist_toast">존재하지 않는 여행입니다</string>
    <string name="enter_trip_invite_code_over_toast">입장할 수 있는 최대 인원은 6명입니다</string>
    <string name="enter_trip_my_code_toast">이미 존재하는 참가자입니다</string>
    <string name="invite_finish_tv_title">초대받은 여행이 맞는지\n 확인해 주세요</string>
    <string name="invite_finish_tv_enter">초대받은 여행이 맞아요!</string>
    <string name="invite_finish_tv_trip">여행 중</string>
    <string name="check_friends_tool_bar">우리의 여행 취향</string>
    <string name="check_friends_check_member">프로필 사진을 눌러서 친구의 취향을 구경해보세요</string>
    <string name="check_friends_preference_number">&#160;%d명</string>
    <string name="check_friends_preference_1_title">여행 계획</string>
    <string name="check_friends_preference_1_left">철저하게</string>
    <string name="check_friends_preference_1_center">아무렇게</string>
    <string name="check_friends_preference_1_right">즉흥으로</string>
    <string name="check_friends_preference_2_title">여행 장소</string>
    <string name="check_friends_preference_2_left">관광지</string>
    <string name="check_friends_preference_2_center">어디든</string>
    <string name="check_friends_preference_2_right">로컬장소</string>
    <string name="check_friends_preference_3_title">식당</string>
    <string name="check_friends_preference_3_left">유명 맛집</string>
    <string name="check_friends_preference_3_center">아무데나</string>
    <string name="check_friends_preference_3_right">가까운 곳</string>
    <string name="check_friends_preference_4_title">사진</string>
    <string name="check_friends_preference_4_left">사진필수</string>
    <string name="check_friends_preference_4_5_center">상관없어</string>
    <string name="check_friends_preference_4_right">눈에 담기</string>
    <string name="check_friends_preference_5_title">여행 일정</string>
    <string name="edit_trip_info_tb_title">여행 정보 수정</string>
    <string name="edit_trip_info_tv_title">어떤 여행인가요?</string>
    <string name="edit_trip_info_one_line_info_tv_title">여행 일정을 알려주세요</string>
    <string name="edit_trip_info_et_name_hint">이번 여행 이름을 입력해 주세요</string>
    <string name="edit_trip_info_slash">-</string>
    <string name="edit_trip_info_quit_btn">나가기</string>
    <string name="edit_trip_info_edit_btn">수정하기</string>
</resources>