<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <import type="com.going.domain.entity.NameState"/>
        <variable
            name="viewModel"
            type="com.going.presentation.createtrip.CreateTripViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_000"
        tools:context=".createtrip.CreateTripActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_create_trip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white_000"
            android:elevation="2dp"
            android:paddingVertical="12dp"
            android:paddingStart="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/create_trip_tb_title"
            app:titleTextColor="@color/black_000" />

        <TextView
            android:id="@+id/tv_create_trip_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="24dp"
            android:text="@string/create_trip_name_tv_title"
            android:textColor="@color/black_000"
            style="@style/TextAppearance.Doorip.Body3.Bold"
            app:layout_constraintStart_toStartOf="@id/tb_create_trip"
            app:layout_constraintTop_toBottomOf="@id/tb_create_trip" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_create_trip_name"
            style="@style/edit_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:afterTextChanged="@{(text) -> viewModel.checkNameAvailable()}"
            android:hint="@string/create_trip_et_name_hint"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:text="@={viewModel.name}"
            android:textAppearance="@style/TextAppearance.Doorip.Detail1.Regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_create_trip_name_title" />

        <TextView
            android:id="@+id/tv_name_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@{@string/counter(viewModel.NameLength, viewModel.MAX_TRIP_LEN)}"
            android:textColor="@color/gray_200"
            app:layout_constraintEnd_toEndOf="@id/et_create_trip_name"
            app:layout_constraintTop_toBottomOf="@id/et_create_trip_name" />

        <TextView
            android:id="@+id/tv_create_trip_on_line_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:text="@string/create_trip_one_line_info_tv_title"
            android:textColor="@color/black_000"
            style="@style/TextAppearance.Doorip.Body3.Bold"
            app:layout_constraintStart_toStartOf="@id/et_create_trip_name"
            app:layout_constraintTop_toBottomOf="@id/et_create_trip_name" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_create_trip_on_line_info_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="13dp">

            <TextView
                android:id="@+id/tv_create_trip_start_date"
                android:background="@drawable/shape_rect_4_gray200_line"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_weight="1"
                android:paddingVertical="16dp"
                android:paddingHorizontal="12dp"
                android:hint="@string/create_trip_start_date"
                android:maxLines="1"
                android:text="@={viewModel.StartDate}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_trip_slash"
                android:textColor="@color/black_000"
                app:layout_constraintStart_toStartOf="@id/et_create_trip_name"
                app:layout_constraintTop_toBottomOf="@id/et_create_trip_name" />

            <TextView
                android:id="@+id/tv_create_trip_end_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_weight="1"
                android:paddingVertical="16dp"
                android:paddingHorizontal="12dp"
                android:background="@drawable/shape_rect_4_gray200_line"
                android:hint="@string/create_trip_end_date"
                android:maxLines="1"
                android:text="@={viewModel.EndDate}" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create_trip_finish"
            style="@style/button_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/sel_rounded_corner_button"
            android:enabled="@{viewModel.isProfileAvailable()}"
            android:onClick="@{() -> viewModel.setButtonAvailable()}"
            android:paddingVertical="10dp"
            android:text="@string/create_trip_finish_btn"
            android:textColor="@{viewModel.isProfileAvailable() == true ? @color/white_000 : @color/gray_50}"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>