<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.going.domain.entity.NameState" />

        <variable
            name="viewModel"
            type="com.going.presentation.todo.editinfo.EditTripInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_000"
        tools:context=".todo.editinfo.EditTripInfoActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tb_edit_trip_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rect_4_gray200_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_edit_trip_info_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/TextAppearance.Doorip.Body1.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/edit_trip_info_tb_title"
                app:layout_constraintBottom_toBottomOf="@id/btn_edit_trip_info_back"
                app:layout_constraintStart_toEndOf="@id/btn_edit_trip_info_back"
                app:layout_constraintTop_toTopOf="@id/btn_edit_trip_info_back" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.going.presentation.designsystem.edittext.EmojiCounterEditText
            android:id="@+id/et_edit_trip_info_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:imeOptions="actionNext"
            app:canBlankError="true"
            app:hint="@string/edit_trip_info_et_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_edit_trip_info"
            app:title="@string/edit_trip_info_tv_title" />


        <TextView
            android:id="@+id/tv_edit_trip_info_on_line_info_title"
            style="@style/TextAppearance.Doorip.Body3.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/edit_trip_info_one_line_info_tv_title"
            android:textColor="@color/gray_700"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_edit_trip_info_name" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_edit_trip_info_on_line_info_title">

            <TextView
                android:id="@+id/tv_edit_trip_info_start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rect_4_gray700_line"
                android:maxLines="2"
                android:paddingHorizontal="12dp"
                android:paddingVertical="16dp"
                android:text="@{viewModel.isStartDateAvailable() == true ? @string/create_trip_date(viewModel.startYear, viewModel.startMonth, viewModel.startDay) : @string/create_trip_start_date}"
                android:textColor="@color/gray_700" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_trip_info_slash"
                android:textColor="@color/gray_700"
                app:layout_constraintStart_toStartOf="@id/et_edit_trip_info_name"
                app:layout_constraintTop_toBottomOf="@id/et_edit_trip_info_name" />

            <TextView
                android:id="@+id/tv_edit_trip_info_end_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rect_4_gray700_line"
                android:maxLines="2"
                android:paddingHorizontal="12dp"
                android:paddingVertical="16dp"
                android:text="@{viewModel.isEndDateAvailable() == true ? @string/create_trip_date(viewModel.endYear, viewModel.endMonth, viewModel.endDay) : @string/create_trip_end_date}"
                android:textColor="@color/gray_700" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_edit_trip_info_quit"
            style="@style/TextAppearance.Doorip.Body1.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="22dp"
            android:background="@drawable/shape_rect_4_white000_fill"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            android:text="@string/edit_trip_info_quit_btn"
            android:textColor="@color/gray_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_edit_trip_info_edit"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btn_edit_trip_info_edit"
            style="@style/TextAppearance.Doorip.Body1.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="22dp"
            android:background="@drawable/sel_rounded_corner_button"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            android:text="@string/edit_trip_info_edit_btn"
            android:textColor="@color/white_000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_edit_trip_info_quit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
